# twitter-api

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs  not_found.rs  tweet.rs  user.rs
src/meta/: tweet.rs  user.rs
src/models/: Tweet.rs  User.rs  mod.rs
src/utils/: validations.rs
