[package]
name = "twitter"
version = "0.1.0"
authors = ["Weldisson Araujo <weldisson.araujo@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.9"
mongodb = "0.3.7"
bson = "0.13.0"
rocket = "0.4.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]